# Full-stack-ml-apps

./: LICENSE
backend/: main.py  pyproject.toml  requirements.txt
frontend/: netlify.toml
frontend/src/: App.jsx
mnist_fullstack/backend/: mnist_model.h5  rnder.yaml  train.py
mnist_fullstack/frontend/src/: App.jsx
